--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,40 +1,47 @@
 <div id="carousel-travels-container">
-	<div class="container py-5 text-center">
-		<div id="carousel-travels" class="carousel slide mx-auto" style="max-width: 1200px;" data-bs-ride="carousel">
-			<div class="carousel-inner rounded">
-				@for (image of images; track $index) {
-				<div class="carousel-item {{ $index === 0 ? 'active' : '' }}">
-					<img [src]="image" class="d-block w-100" alt="Imagen" style="max-width: 1200; max-height: 600px;">
-					<div class="travel-info">
-						<h5>Destino: Malta</h5>
-						<p>Descubre las maravillas de esta isla mediterránea.</p>
-						<button class="carousel-control-prev" type="button" data-bs-target="#carousel-travels"
-							data-bs-slide="prev">
-							<span class="carousel-control-prev-icon"></span>
-						</button>
-						<button class="carousel-control-next" type="button" data-bs-target="#carousel-travels"
-							data-bs-slide="next">
-							<span class="carousel-control-next-icon"></span>
-						</button>
-					</div>
+	<div id="carousel-travels" class="carousel slide" data-bs-ride="carousel">
+		<div class="carousel-inner">
+			@for (travel of travels(); track travel.id) {
+			<div class="carousel-item" [class.active]="$first">
+				<img [src]="travel.images[0]" class="d-block w-100" id="travelImage" alt="Imagen de {{ travel.title }}">
+				<div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+					<h5><a [routerLink]="['/travels', travel.id]" id="detailsAnchor" class="text-white">{{ travel.title }}</a></h5>
+					<p class="text-white">{{ travel.description }}</p>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carousel-travels"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon"></span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carousel-travels"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon"></span>
+					</button>
 				</div>
-				}
 			</div>
-		</div>
-
-		<div class="mt-4">
-			<!-- dependiendo de si esta logueado o no mostrar unos botones u otros -->
-			<a href="../login/login.component.html" class="btn btn-primary m-2">Login</a>
-			<a href="/register" class="btn btn-success m-2">Register</a>
-			<a href="/travels" class="btn btn-warning m-2">Ver Viajes</a>
+			}
 		</div>
 	</div>
 </div>
 
-<div class="p-4 bg-success text-center">
-	<h2 class="text-light">Sobre TravelTribe</h2>
-	<p class="text-light">Explora el mundo con TravelTribe. Conectamos viajeros con experiencias únicas y aventuras
-		inolvidables.</p>
+<div class="container-fluid text-center py-5" id="buttons">
+	@if(!isLogged()) {
+	<a routerLink="/auth/login" class="btn btn-outline-success btn-lg mx-2">Login</a>
+	<a routerLink="/auth/register" class="btn btn-outline-success btn-lg mx-2">Register</a>
+	}
+	<a routerLink="/travels" class="btn btn-outline-success btn-lg mx-2">Travels</a>
 </div>
 
-<!-- contact -->
+<section class="py-5" id="about">
+	<div class="container d-flex flex-column flex-md-row align-items-center">
+		<div class="col-md-6">
+			<h2 class="fw-bold" id="titleAbout">About TravelTribe</h2>
+			<p class="lead" id="descAbout">
+				More than just a travel platform, TravelTribe connects passionate travelers with authentic, local, and unforgettable experiences. 
+				Whether you're looking for thrilling adventures, relaxing getaways, or meaningful cultural encounters, we help you live the journey of your dreams.
+			</p>
+		</div>
+		<div class="col-md-6 text-center">
+			<img src="/aboutImage.jpg" alt="Travel Image"
+				class="img-fluid rounded shadow" id="imageAbout">
+		</div>
+	</div>
+</section>
