--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -12,54 +12,62 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="offcanvas offcanvas-start" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas offcanvas-start w-50" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                    <a class="navbar-brand" id="offcanvasNavbarLabel" [routerLink]="['/home']">
                         TravelTribe
-                    </h5>
+                    </a>
                     <button type="button" class="btn-close-white btn-close text-reset" data-bs-dismiss="offcanvas"
                         aria-label="Cerrar"></button>
                 </div>
 
-                <div class="offcanvas-body">
+                <div class="offcanvas-body pt-0">
                     <ul class="navbar-nav flex-grow-1 pe-3">
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown travels">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false" routerLink="/travels"
                                 routerLinkActive="active">Travels</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" routerLink="/travels/popular"
-                                        routerLinkActive="active">Popular Travels</a></li>
-                                <li><a class="dropdown-item" routerLink="/travels/adventure"
-                                        routerLinkActive="active">Adventure Trips</a></li>
+                            <ul class="dropdown-menu bg-success" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item text-white liDropdown" routerLink="/travels/popular">Popular
+                                        Travels</a></li>
+                                <li><a class="dropdown-item text-white liDropdown"
+                                        routerLink="/travels/adventure">Adventure Trips</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" routerLink="/travels/map" routerLinkActive="active">Map</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
                         </li>
+
+                        @if(user()!.rol === 'admin'){
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/travels/new" routerLinkActive="active">New Travel</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/auth/users" routerLinkActive="active">Users</a>
                         </li>
+                        }
+
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link" routerLink="/profile">Profile</a>
+                        </li>
+                        <li class="nav-item d-md-none">
+                            <button class="nav-link" (click)="logout()">Logout</button>
+                        </li>
                     </ul>
 
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav d-none d-md-block">
                         <li class="nav-item dropdown">
-                            <a class="nav-link" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 ⋮
                             </a>
-                            <ul class="dropdown-menu dropdown-left" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu dropdown-left bg-success" aria-labelledby="navbarDropdown">
                                 <li class="nav-item">
-                                    <a class="dropdown-item" routerLink="/profile">Profile</a>
+                                    <a class="dropdown-item text-white liDropdown" routerLink="/profile">Profile</a>
                                 </li>
                                 <li class="nav-item">
-                                    <button class="dropdown-item" (click)="logout()">Logout</button>
+                                    <button class="dropdown-item text-white liDropdown"
+                                        (click)="logout()">Logout</button>
                                 </li>
                             </ul>
                         </li>
