--- a/src/app/travels/travels-page/travels-page.component.html
+++ b/src/app/travels/travels-page/travels-page.component.html
@@ -1,9 +1,9 @@
 <top-menu></top-menu>
 <!-- filtro por caracteristicas -->
 
-<div class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-0">
-	@for (travel of travels(); track travel.id) {
-	<travels-card class="col" style="padding: 10px 10px;" [travel]="travel" (deleted)="deleteEvent($event)"></travels-card>
+<div class="mb-4 mt-4 row row-cols-1 g-0">
+	@for (travel of travels(); track travel._id) {
+	<travels-card class="col py-2 px-3" [travel]="travel" (deleted)="deleteEvent($event)"></travels-card>
 	}
 </div>
 
